--- a/src/Card.css
+++ b/src/Card.css
@@ -1,11 +1,12 @@
 .card{
-    background-color: lightseagreen;
+    background-color: rgb(28, 99, 95);
     display : inline-block;
     border-width: 0.25rem;
     border-radius: 0.5rem;
     padding : 1rem;
     margin : 0.5rem;
     box-shadow: 4px 4px 8px 0px rgba( 0, 0, 0, 0.2 );
+    color: rgb(255, 255, 255);
 }
 .card:hover{
     transform: scale(1.1);
